--- a/app/src/main/res/layout/content_editor.xml
+++ b/app/src/main/res/layout/content_editor.xml
@@ -8,5 +8,5 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="first"/>
+        android:text="second"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
